--- a/components/footer.html
+++ b/components/footer.html
@@ -14,7 +14,9 @@
             <div class="lg:col-span-2">
                 <div class="flex items-center space-x-3 mb-6">
                     <div class="logo-style">
-                        <img src="public/images/logo/brand_logo.png" alt="Properties 4 Creations Logo">
+                        <img src="public/images/logo/brand_logo.png"
+                             alt="Properties 4 Creations Logo – Affordable Homes for Families & Veterans"
+                             class="w-12 h-12 rounded-lg object-cover">
                     </div>
                     <div>
                         <h3 class="text-xl font-bold tracking-wide text-white">Properties 4 Creations</h3>
