--- a/components/header.html
+++ b/components/header.html
@@ -7,8 +7,8 @@
                 <a href="index.html" class="flex items-center space-x-3 group">
                     <div class="logo-style">
                         <img src="public/images/logo/brand_logo.png"
-                             alt="P4C Logo">
-                    </div>
+                             alt="Properties 4 Creations Logo – Affordable Homes for Families & Veterans"
+                             class="w-12 h-12 rounded-lg object-cover">
 
                     <span class="text-xl font-bold group-hover:text-brand-wood transition-colors duration-200 hidden sm:inline">
                         Properties 4 Creations
