changes verteran focus to families & veterans

--- a/components/footer.html
+++ b/components/footer.html
@@ -13,7 +13,7 @@
 
             <div class="lg:col-span-2">
                 <div class="flex items-center space-x-3 mb-6">
-                    <div class="logo-container w-16 h-auto" aria-label="Properties 4 Creations logo">
+                    <div class="logo-container w-16 h-auto" aria-label="Properties 4 Creations logo: Affordable housing for families and veterans in East Texas">
                         <!-- Properties4 Creations – House + Flag Roof (Gold on Navy) -->
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 500" role="img" aria-labelledby="footerLogoTitle footerLogoDesc" class="w-full h-auto">
                           <title id="footerLogoTitle">Properties4 Creations Logo</title>
@@ -123,7 +123,7 @@
                     </div>
                     <div class="flex items-center text-slate-300 hover:text-wood-400 transition-colors">
                         <span class="mr-3 text-wood-500">📞</span>
-                        <a href="tel:+19036470000">(903) 647-0000</a>
+                        <a href="tel:+19032831770">(903) 283-1770</a>
                     </div>
                 </div>
             </div>
