dynamic updates and optimization for PWA Support

--- a/components/footer.html
+++ b/components/footer.html
@@ -15,7 +15,7 @@
             <div class="lg:col-span-2">
                 <div class="flex items-center space-x-3 mb-6">
                     <div class="logo-container w-16 h-auto" aria-label="Properties 4 Creations logo: Affordable housing for families and veterans in East Texas">
-                        <img src="public/images/logo/logo.svg" alt="Properties 4 Creations Logo" class="w-full h-auto">
+                        <img src="public/images/logo/brand_logo(1).png" alt="Properties 4 Creations Logo" class="w-full h-auto">
                     </div>
                     <div>
                         <h3 class="text-xl font-bold tracking-wide text-white">Properties 4 Creations</h3>
